#88 Fixed bug where modal was not showing on successive requests

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,9 @@ button {
 a {
     text-decoration: none;
     color: inherit; 
+}
+
+a:hover {
     cursor: pointer;
 }
 
